# Generated by Django 5.2.8 on 2025-11-13 08:46

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='ChatbotContext',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, unique=True)),
                ('system_prompt', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='ChatSession',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('initial_message', models.TextField()),
                ('model', models.CharField(choices=[('gpt-5-nano', 'Gpt 5 Nano'), ('gpt-4.1-mini', 'Gpt 4 1 Mini')], default='gpt-4.1-mini', help_text='GPT Model für die Session', max_length=30)),
                ('provider', models.CharField(choices=[('dummy', 'Dummybot'), ('openai', 'OPEN AI based Bot')], default='dummy', max_length=30)),
                ('context', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='chat.chatbotcontext')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='chat_sessions', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='ChatMessage',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('prompt', models.TextField(help_text='User Nachricht / Prompt')),
                ('response_message', models.TextField(blank=True, null=True)),
                ('response_json', models.JSONField(blank=True, null=True)),
                ('session', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='messages', to='chat.chatsession')),
            ],
            options={
                'abstract': False,
            },
        ),
    ]
